@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v25.10.14-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-14 22:02:07, took 00:14:54, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter v25.10.15-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2025-10-15 05:27:46, took 00:12:03, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
