@@ -17591,3 +17591,6 @@ qc pass: wireguard over asymmetric ports
 ---------------------------------- 2025-10-14 21:25:32 25.10.14
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-10-15 05:01:24 25.10.15
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
